--- a/com.restphone.androidproguardscala.parent/pom.xml
+++ b/com.restphone.androidproguardscala.parent/pom.xml
@@ -1,46 +1,72 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.restphone</groupId>
-	<artifactId>com.restphone.androidproguardscala.parent</artifactId>
-	<packaging>pom</packaging>
-	<properties>
-		<tycho-version>0.14.1</tycho-version>
-	</properties>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<extensions>true</extensions>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-versions-plugin</artifactId>
-				<version>${tycho-version}</version>
-			</plugin>
-		</plugins>
-	</build>
-	<repositories>
-		<repository>
-			<id>eclipse-indigo</id>
-			<layout>p2</layout>
-			<url>http://download.eclipse.org/releases/indigo</url>
-		</repository>
-	</repositories>
-	<modules>
-		<module>
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.restphone</groupId>
+  <artifactId>com.restphone.androidproguardscala.parent</artifactId>
+  <version>0.0.48-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <properties>
+    <tycho-version>0.14.1</tycho-version>
+  </properties>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-maven-plugin</artifactId>
+        <version>${tycho-version}</version>
+        <extensions>true</extensions>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-versions-plugin</artifactId>
+        <version>${tycho-version}</version>
+      </plugin>
+    </plugins>
+  </build>
+  <repositories>
+    <repository>
+      <id>eclipse-indigo</id>
+      <layout>p2</layout>
+      <url>http://download.eclipse.org/releases/indigo</url>
+    </repository>
+  </repositories>
+  <modules>
+    <module>
 			../com.restphone.androidproguardscala.plugin
 		</module>
-		<module>../com.restphone.androidproguardscala.feature</module>
-		
-		<module>
+    <module>
+      ../com.restphone.androidproguardscala.feature
+    </module>
+    <module>
 			../com.restphone.androidproguardscala.updatesite
 		</module>
-	</modules>
-	<version>0.0.48-SNAPSHOT</version>
+  </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>13.0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.restphone</groupId>
+        <artifactId>androidproguardscalalib_2.10</artifactId>
+        <version>0.4-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm</artifactId>
+        <version>4.1</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
 </project>
-
-
-
