--- a/com.restphone.androidproguardscala.parent/pom.xml
+++ b/com.restphone.androidproguardscala.parent/pom.xml
@@ -15,6 +15,8 @@
     <repo.scala-ide>${repo.scala-ide.root}/scala210/dev/base/</repo.scala-ide>
     <scala.version>2.10.0</scala.version>
     <junit.version>4.10</junit.version>
+    <version.suffix>2_09</version.suffix>
+    <version.tag>local</version.tag>
   </properties>
   <build>
     <pluginManagement>
