Use different jar names (don't modify them using the ivy scheme; it's all maven now)

--- a/com.restphone.androidproguardscala.plugin/build.properties
+++ b/com.restphone.androidproguardscala.plugin/build.properties
@@ -7,14 +7,13 @@ bin.includes = plugin.xml,\
                COPYING,\
                proguard_cache/,\
                proguard_cache_conf/,\
-               lib/androidproguardscalalib_2.10-jar-androidproguardscalalib_2.10-0.4-SNAPSHOT.jar,\
-               lib/asm-jar-asm-4.1.jar,\
-               lib/guava-jar-guava-13.0.1.jar,\
-               lib/jartender_2.10-jar-jartender_2.10-0.4-SNAPSHOT.jar,\
-               lib/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.4-SNAPSHOT.jar,\
-               lib/jsr305-jar-jsr305-1.3.9.jar,\
-               lib/proguard-base-jar-proguard-base-4.8.jar,\
-               lib/scalaz-core_2.10-bundle-scalaz-core_2.10-7.0.0-M7.jar
+               lib/androidproguardscalalib_2.10-0.4-SNAPSHOT.jar,\
+               lib/asm-4.1.jar,\
+               lib/guava-13.0.1.jar,\
+               lib/jartender_2.10-0.4-SNAPSHOT.jar,\
+               lib/javasignatureparser_2.10-0.4-SNAPSHOT.jar,\
+               lib/proguard-base-4.8.jar,\
+               lib/scalaz-core_2.10-7.0.0-M7.jar
 src.includes = README.md,\
                docs/,\
                src/,\
