--- a/com.restphone.androidproguardscala.plugin/.classpath
+++ b/com.restphone.androidproguardscala.plugin/.classpath
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/androidproguardscalalib_2.10-jar-androidproguardscalalib_2.10-0.4-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/asm-jar-asm-4.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/guava-jar-guava-13.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jartender_2.10-jar-jartender_2.10-0.4-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javasignatureparser_2.10-jar-javasignatureparser_2.10-0.4-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/jsr305-jar-jsr305-1.3.9.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/proguard-base-jar-proguard-base-4.8.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/scalaz-core_2.10-bundle-scalaz-core_2.10-7.0.0-M7.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/androidproguardscalalib_2.10-0.4-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/asm-4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/guava-13.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jartender_2.10-0.4-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javasignatureparser_2.10-0.4-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/proguard-base-4.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/scalaz-core_2.10-7.0.0-M7.jar"/>
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
