--- a/com.restphone.androidproguardscala.plugin/build.properties
+++ b/com.restphone.androidproguardscala.plugin/build.properties
@@ -7,11 +7,11 @@ bin.includes = plugin.xml,\
                COPYING,\
                proguard_cache/,\
                proguard_cache_conf/,\
-               lib/androidproguardscalalib_2.10-0.4-SNAPSHOT.jar,\
+               lib/androidproguardscalalib_2.10-0.4.jar,\
                lib/asm-4.1.jar,\
                lib/guava-13.0.1.jar,\
-               lib/jartender_2.10-0.4-SNAPSHOT.jar,\
-               lib/javasignatureparser_2.10-0.4-SNAPSHOT.jar,\
+               lib/jartender_2.10-0.5.jar,\
+               lib/javasignatureparser_2.10-0.4.jar,\
                lib/proguard-base-4.8.jar,\
                lib/scalaz-core_2.10-7.0.0-M7.jar
 src.includes = README.md,\
