--- a/com.restphone.androidproguardscala.parent/pom.xml
+++ b/com.restphone.androidproguardscala.parent/pom.xml
@@ -173,7 +173,7 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>13.0.1</version>
+        <version>14.0.1</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
@@ -183,7 +183,7 @@
       <dependency>
         <groupId>com.restphone</groupId>
         <artifactId>androidproguardscalalib_2.10</artifactId>
-        <version>0.4</version>
+        <version>0.5-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>org.ow2.asm</groupId>
