--- a/com.restphone.androidproguardscala.plugin/.project
+++ b/com.restphone.androidproguardscala.plugin/.project
@@ -36,6 +36,7 @@
 		<nature>org.eclipse.pde.PluginNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.pde.api.tools.apiAnalysisNature</nature>
+		<nature>org.apache.ivyde.eclipse.ivynature</nature>
 	</natures>
 	<linkedResources>
 		<link>
