--- a/com.restphone.androidproguardscala.updatesite/pom.xml
+++ b/com.restphone.androidproguardscala.updatesite/pom.xml
@@ -5,7 +5,7 @@
   <parent>
   	<groupId>com.restphone</groupId>
   	<artifactId>com.restphone.androidproguardscala.parent</artifactId>
-  	<version>0.0.48</version>
+  	<version>0.0.49-SNAPSHOT</version>
   	<relativePath>../com.restphone.androidproguardscala.parent</relativePath>
   </parent>
   <packaging>eclipse-repository</packaging>
