use .qualifier instead of SNAPSHOT

--- a/com.restphone.androidproguardscala.plugin/.classpath
+++ b/com.restphone.androidproguardscala.plugin/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/scala"/>
 	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=com.restphone.androidproguardscala.plugin&amp;ivyXmlPath=pom.xml&amp;confs=*"/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=com.restphone.androidproguardscala.plugin&amp;ivyXmlPath=dependencies.xml&amp;confs=*"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
