--- a/com.restphone.androidproguardscala.parent/pom.xml
+++ b/com.restphone.androidproguardscala.parent/pom.xml
@@ -183,7 +183,7 @@
       <dependency>
         <groupId>com.restphone</groupId>
         <artifactId>androidproguardscalalib_2.10</artifactId>
-        <version>0.5-SNAPSHOT</version>
+        <version>0.5</version>
       </dependency>
       <dependency>
         <groupId>org.ow2.asm</groupId>
