--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </prerequisites>
   <artifactId>com.restphone.androidproguardscala</artifactId>
   <groupId>com.restphone</groupId>
-  <version>0.0.49-SNAPSHOT</version>
+  <version>0.0.50</version>
 
   <profiles>
     <profile>
