--- a/com.restphone.androidproguardscala.plugin/build.properties
+++ b/com.restphone.androidproguardscala.plugin/build.properties
@@ -7,13 +7,13 @@ bin.includes = plugin.xml,\
                COPYING,\
                proguard_cache/,\
                proguard_cache_conf/,\
-               lib/androidproguardscalalib_2.10-0.5.jar,\
-               lib/jartender_2.10-0.6.jar,\
-               lib/javasignatureparser_2.10-0.6.jar,\
+               lib/androidproguardscalalib_2.10-0.6-SNAPSHOT.jar,\
                lib/asm-4.1.jar,\
-               lib/guava-14.0.1.jar,\
+               lib/guava-16.0.1.jar,\
+               lib/jartender_2.10-0.7-SNAPSHOT.jar,\
+               lib/javasignatureparser_2.10-0.7-SNAPSHOT.jar,\
                lib/proguard-base-4.10.jar,\
-               lib/scalaz-core_2.10-7.0.2.jar
+               lib/scalaz-core_2.10-7.0.6.jar
 src.includes = \
                docs/,\
                src/,\
