--- a/com.restphone.androidproguardscala.parent/pom.xml
+++ b/com.restphone.androidproguardscala.parent/pom.xml
@@ -13,7 +13,7 @@
     <repo.eclipse>http://download.eclipse.org/releases/indigo/</repo.eclipse>
     <repo.scala-ide.root>http://download.scala-ide.org/ecosystem/</repo.scala-ide.root>
     <repo.scala-ide>${repo.scala-ide.root}/scala210/dev/base/</repo.scala-ide>
-    <scala.version>2.10.4</scala.version>
+    <scala.version>2.11.0</scala.version>
     <junit.version>4.10</junit.version>
     <version.suffix>2_09</version.suffix>
     <version.tag>local</version.tag>
@@ -182,7 +182,7 @@
       </dependency>
       <dependency>
         <groupId>com.restphone</groupId>
-        <artifactId>androidproguardscalalib_2.10</artifactId>
+        <artifactId>androidproguardscalalib_2.11</artifactId>
         <version>0.6-SNAPSHOT</version>
       </dependency>
       <dependency>
@@ -190,6 +190,21 @@
         <artifactId>asm</artifactId>
         <version>4.1</version>
       </dependency>
+      <dependency>
+	<groupId>org.scala-lang</groupId>
+	<artifactId>scala-xml</artifactId>
+	<version>2.11.0-M4</version>
+      </dependency>
+      <dependency>
+	<groupId>org.scala-lang</groupId>
+	<artifactId>scala-parser-combinators</artifactId>
+	<version>2.11.0-M4</version>
+      </dependency>
+<dependency>
+  <groupId>org.scala-lang</groupId>
+  <artifactId>scala-library</artifactId>
+  <version>2.11.0</version>
+</dependency>
     </dependencies>
   </dependencyManagement>
 
